@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-4853: Fetch inputs before starting outputs (rohini)
+
 PIG-4847: POPartialAgg processing and spill improvements (rohini)
 
 PIG-4840: Do not turn off UnionOptimizer for unsupported storefuncs in case of no vertex groups (rohini)
